# codenamesNLP

./: .gitignore  README.md  pyproject.toml
app/: ui.py
notebooks/: README.md
src/codenames_spymaster/: __init__.py
